--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <header></header>
     <main>
-        <section></section>
+        <section>
+            <p>Test</p>
+        </section>
         <section></section>
         <section></section>
     </main>
